reverted css changes.

--- a/css/styles.css
+++ b/css/styles.css
@@ -245,9 +245,6 @@ header ul.is-sticky li a.active {
 
 #properties .container {
     position: relative;
-    height: 300px;
-    width: 400px;
-    overflow: hidden;
 }
 
 #properties .container:before {
@@ -277,8 +274,8 @@ header ul.is-sticky li a.active {
 }
 
 #properties-slider img {
-    height: auto;
-    width: 400px;
+    width: 100%;
+    display: block;
 }
 
 #properties-slider .property-details {
