--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ header ul.is-sticky li a.active {
 
 /* start: hero section styles */
 #hero {
-    background: url('https://onclickwebdesign.com/wp-content/uploads/hero_1.jpg') center center no-repeat;
+    background: url('https://user-images.githubusercontent.com/47961961/104109774-ca726a00-5296-11eb-9c36-7455487e5b6b.jpg') center center no-repeat;
     background-size: cover;
     position: absolute;
     top: 0;
