--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ h1 {
 
 h2 {
     font-size: 2.5rem;
-    color: #f69314;
+    color: #429BB8;
     margin-bottom: 1rem;
     line-height: 1.2;
 }
@@ -73,7 +73,7 @@ p {
 }
 
 button.rounded {
-    background: #f69314;
+    background: #429BB8;
     border: none;
     color: #fff;
     font-size: 16px;
@@ -162,7 +162,7 @@ header ul li a.active {
 
 header ul.is-sticky li a:hover,
 header ul.is-sticky li a.active {
-    color: #f69314;
+    color: #429BB8;
 }
 /* end: header styles */
 
@@ -228,7 +228,7 @@ header ul.is-sticky li a.active {
 }
 
 #how-it-works span.fas {
-    color: #f69314;
+    color: #429BB8;
     font-size: 35px;
 }
 /* end: how it works styles */
@@ -314,11 +314,6 @@ header ul.is-sticky li a.active {
     margin-top: 0.5rem;
 }
 
-#properties button.rounded {
-    display: block;
-    margin: 2rem auto 0;
-    width: 350px;
-}
 /* end: properties styles */
 
 /* start: agents styles */
@@ -405,7 +400,7 @@ header ul.is-sticky li a.active {
 }
 
 #services .flex > div .fas {
-    color: #f69314;
+    color: #429BB8;
     font-size: 40px;
     float: left;
     margin-top: 15px;
@@ -419,7 +414,7 @@ header ul.is-sticky li a.active {
 }
 
 #services .flex > div a {
-    color: #f69314;
+    color: #429BB8;
     text-decoration: none;
 }
 
@@ -555,7 +550,7 @@ header ul.is-sticky li a.active {
 
 #address-container a {
     text-decoration: none;
-    color: #f69314;
+    color: #429BB8;
 }
 
 #address-container a:hover {
@@ -639,7 +634,7 @@ footer .footer-subscribe input {
 footer button.right-rounded {
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
-    background: #f69314;
+    background: #429BB8;
     font-size: 16px;
     color: #000;
     padding: 10px 30px 9px;
@@ -745,7 +740,7 @@ footer small a:hover {
 
     nav ul li a.active,
     nav ul li a:hover {
-        color: #f69314;
+        color: #429BB8;
     }
 }
 
